[gd_scene load_steps=15 format=3 uid="uid://c6umi77lch58o"]

[ext_resource type="Script" uid="uid://57e2qg740qfs" path="res://scripts/chest.gd" id="1_oii8l"]
[ext_resource type="Shader" uid="uid://cf1omsptua7n7" path="res://shaders/bloom.gdshader" id="2_gqd3d"]
[ext_resource type="Texture2D" uid="uid://dfaua3dbv827y" path="res://sprites/chest_opened_large.png" id="2_yhylo"]
[ext_resource type="Texture2D" uid="uid://cmn2q84ravkmr" path="res://sprites/chest_bigger_sprite.png" id="3_gqd3d"]
[ext_resource type="Texture2D" uid="uid://dupypjxnmi34o" path="res://sprites/confetti.png" id="4_yue2o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gqd3d"]
radius = 11.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yue2o"]
shader = ExtResource("2_gqd3d")
shader_parameter/glow_color = Color(0.91767704, 0.41357914, 1, 1)
shader_parameter/glow_intensity = 5.0
shader_parameter/glow_radius = 0.050000002375
shader_parameter/pulse_speed = 2.50000011875
shader_parameter/pulse_strength = 1.0
shader_parameter/sprite_modulate = Color(1, 1, 1, 1)

[sub_resource type="Curve" id="Curve_yhylo"]
_limits = [0.0, 100.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.38372093, 47.191017), 0.0, 0.0, 0, 0, Vector2(1, 21.34832), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_w02o5"]
_data = [Vector2(0, 0.21348321), 0.0, 0.0, 0, 0, Vector2(0.511628, 0.6516854), 0.0, 0.0, 0, 0, Vector2(1, 0.73033714), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sj8sc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yhylo"]

[sub_resource type="Animation" id="Animation_yhylo"]
resource_name = "fade_sprite"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChestSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.044158664),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5137255)]
}

[sub_resource type="Animation" id="Animation_w02o5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChestSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ilhio"]
_data = {
&"RESET": SubResource("Animation_w02o5"),
&"fade_sprite": SubResource("Animation_yhylo")
}

[node name="Chest" type="Node2D"]
script = ExtResource("1_oii8l")
chest_opened_sprite = ExtResource("2_yhylo")

[node name="InteractArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("CircleShape2D_gqd3d")

[node name="ChestSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_yue2o")
texture = ExtResource("3_gqd3d")

[node name="ConfettiParticle" type="CPUParticles2D" parent="."]
position = Vector2(0, -10)
emitting = false
amount = 32
texture = ExtResource("4_yue2o")
lifetime = 0.3
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.2
direction = Vector2(0, -1)
spread = 90.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
angular_velocity_min = -25.0
angular_velocity_max = 25.0
damping_max = 11.0
damping_curve = SubResource("Curve_yhylo")
angle_min = -90.0
angle_max = 90.0
scale_amount_max = 1.5
scale_amount_curve = SubResource("Curve_w02o5")

[node name="Background" type="Panel" parent="."]
custom_minimum_size = Vector2(32, 32)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sj8sc")

[node name="DisplaySpot" type="Sprite2D" parent="Background"]
material = SubResource("ShaderMaterial_yhylo")
position = Vector2(16, 16)

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ilhio")
}

[connection signal="area_entered" from="InteractArea" to="." method="_on_interact_area_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="_on_interact_area_area_exited"]
